2.93 file output node broken with more than 4 inputs #87252

Closed
opened 2021-04-07 04:43:26 +02:00 by HF · 20 comments

System Information
Operating system: win10
Graphics card: 2070 super

Blender Version
2.93 4/6

Caused by 6524ceb8cf
note #87292 might be a duplicate but has slightly different symptoms.

Short description of error
file output node doesnt write to folder

Exact steps for others to reproduce the error

file_output_node_bug.zip

Step to produce :

  • extract zip file
  • ctrl + f12 to render animation
  • it will render .png to output_3d folder and render .exr to output_comp/test/
  • add an Input to the File Output node (connected or unconnected does not make a difference)
  • it will render .png to output_3d folder but won't render .exr to output_comp/test/

Original steps:
1, go to compositor
2. create file path
3. render
4. no file in the path

**System Information** Operating system: win10 Graphics card: 2070 super **Blender Version** 2.93 4/6 Caused by 6524ceb8cf note #87292 might be a duplicate but has slightly different symptoms. **Short description of error** file output node doesnt write to folder **Exact steps for others to reproduce the error** [file_output_node_bug.zip](https://archive.blender.org/developer/F9922658/file_output_node_bug.zip) Step to produce : - extract zip file - `ctrl + f12` to render animation - it will render `.png` to `output_3d` folder and render `.exr` to `output_comp/test/` - add an Input to the `File Output` node (connected or unconnected does not make a difference) - it will render `.png` to `output_3d` folder but won't render `.exr` to `output_comp/test/` --- Original steps: 1, go to compositor 2. create file path 3. render 4. no file in the path ---
Author

Added subscriber: @Hongyu

Added subscriber: @Hongyu

#87383 was marked as duplicate of this issue

#87383 was marked as duplicate of this issue

#87292 was marked as duplicate of this issue

#87292 was marked as duplicate of this issue

#87307 was marked as duplicate of this issue

#87307 was marked as duplicate of this issue

Added subscriber: @AditiaA.Pratama

Added subscriber: @AditiaA.Pratama

I happen to have same problem in my existing setup, but somehow I can't reproduce. Attached zip will work just expected. Maybe @Hongyu
if you can check it out again. file_output_node.zip

  • just extract the zip and press Ctrl+F12 to render
I happen to have same problem in my existing setup, but somehow I can't reproduce. Attached zip will work just expected. Maybe @Hongyu if you can check it out again. [file_output_node.zip](https://archive.blender.org/developer/F9922622/file_output_node.zip) - just extract the zip and press Ctrl+F12 to render

Ok I managed to find the bug, so what happen is, if you create a lot of input channel for File Output Node, it will fail to output the file, so currently it only happen with open exr multilayer output in file output node.

image.png

here is the attached zip.

file_output_node_bug.zip

Step to produce :

  • extract zip file
  • ctrl + f12 to render animation
  • it will render .png to output_3d folder but won't render .exr to output_comp/test/

Broken in latest 2.93 buildbot, tested in Windows and Linux.

Ok I managed to find the bug, so what happen is, if you create a lot of input channel for File Output Node, it will fail to output the file, so currently it only happen with open exr multilayer output in file output node. ![image.png](https://archive.blender.org/developer/F9922661/image.png) here is the attached zip. [file_output_node_bug.zip](https://archive.blender.org/developer/F9922658/file_output_node_bug.zip) Step to produce : - extract zip file - `ctrl + f12` to render animation - it will render `.png` to `output_3d` folder but won't render `.exr` to `output_comp/test/` Broken in latest 2.93 buildbot, tested in Windows and Linux.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, there is still something wrong with unconnected sockets of the File Output node.

After 957e292c58, these were crashing (that was fixed by 36f0a1ead7)

Can confirm, there is still something wrong with unconnected sockets of the `File Output` node. After 957e292c58, these were crashing (that was fixed by 36f0a1ead7)
Philipp Oeser changed title from 2.93 file output node broken to 2.93 file output node broken (with unconnected Inputs?) 2021-04-07 13:39:09 +02:00
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member
CC @Jeroen-Bakker

When I reduce the file input node socket to this
image.png

it will output the .exr files, but when I add extra 1 input socket and plug it, it wont output any .exr files
image.png

Hope it will help.

When I reduce the file input node socket to this ![image.png](https://archive.blender.org/developer/F9922794/image.png) it will output the `.exr` files, but when I add extra 1 input socket and plug it, it wont output any `.exr` files ![image.png](https://archive.blender.org/developer/F9922798/image.png) Hope it will help.
Philipp Oeser changed title from 2.93 file output node broken (with unconnected Inputs?) to 2.93 file output node broken (with additional Inputs?) 2021-04-07 18:04:35 +02:00
Member

Possibly unrelated, but I am getting a crash on exit after rendering, too

1  clReleaseCommandQueue                                                                                                              0x7fffa637c128 
2  blender::compositor::OpenCLDevice::~OpenCLDevice                                                         COM_OpenCLDevice.cc  56   0x4456eec      
3  blender::destruct_n<blender::compositor::OpenCLDevice>                                                   BLI_memory_utils.hh  60   0x44464b4      
4  blender::Vector<blender::compositor::OpenCLDevice, 4l, blender::GuardedAllocator>::clear_and_make_inline BLI_vector.hh        421  0x4446097      
5  blender::compositor::opencl_deinitialize                                                                 COM_WorkScheduler.cc 283  0x4445618      
6  blender::compositor::WorkScheduler::deinitialize                                                         COM_WorkScheduler.cc 554  0x4445c1a      
7  COM_deinitialize                                                                                         COM_compositor.cc    121  0x4437fad      
8  WM_exit_ex                                                                                               wm_init_exit.c       582  0x3a433bc      
9  WM_exit                                                                                                  wm_init_exit.c       681  0x3a434f9      
10 wm_exit_handler                                                                                          wm_init_exit.c       447  0x3a42ff8      
11 wm_handler_ui_call                                                                                       wm_event_system.c    693  0x3a2969a      
12 wm_handlers_do_intern                                                                                    wm_event_system.c    2815 0x3a2ec6f      
13 wm_handlers_do                                                                                           wm_event_system.c    2931 0x3a2f126      
14 wm_event_do_handlers                                                                                     wm_event_system.c    3348 0x3a30340      
15 WM_main                                                                                                  wm.c                 646  0x3a24250      
16 main                                                                                                     creator.c            520  0x344cef2   
Possibly unrelated, but I am getting a crash on exit after rendering, too ``` 1 clReleaseCommandQueue 0x7fffa637c128 2 blender::compositor::OpenCLDevice::~OpenCLDevice COM_OpenCLDevice.cc 56 0x4456eec 3 blender::destruct_n<blender::compositor::OpenCLDevice> BLI_memory_utils.hh 60 0x44464b4 4 blender::Vector<blender::compositor::OpenCLDevice, 4l, blender::GuardedAllocator>::clear_and_make_inline BLI_vector.hh 421 0x4446097 5 blender::compositor::opencl_deinitialize COM_WorkScheduler.cc 283 0x4445618 6 blender::compositor::WorkScheduler::deinitialize COM_WorkScheduler.cc 554 0x4445c1a 7 COM_deinitialize COM_compositor.cc 121 0x4437fad 8 WM_exit_ex wm_init_exit.c 582 0x3a433bc 9 WM_exit wm_init_exit.c 681 0x3a434f9 10 wm_exit_handler wm_init_exit.c 447 0x3a42ff8 11 wm_handler_ui_call wm_event_system.c 693 0x3a2969a 12 wm_handlers_do_intern wm_event_system.c 2815 0x3a2ec6f 13 wm_handlers_do wm_event_system.c 2931 0x3a2f126 14 wm_event_do_handlers wm_event_system.c 3348 0x3a30340 15 WM_main wm.c 646 0x3a24250 16 main creator.c 520 0x344cef2 ```
Jeroen Bakker self-assigned this 2021-04-07 23:41:44 +02:00
Member

Seems unrelated, please add new ticket as I might have caused it.

Seems unrelated, please add new ticket as I might have caused it.
Philipp Oeser changed title from 2.93 file output node broken (with additional Inputs?) to 2.93 file output node broken with more than 4 outputs 2021-04-08 18:03:00 +02:00
Philipp Oeser changed title from 2.93 file output node broken with more than 4 outputs to 2.93 file output node broken with more than 4 inputs 2021-04-08 18:03:55 +02:00
Member

Added subscriber: @Andrzej_Sykut

Added subscriber: @Andrzej_Sykut
Member

Added subscriber: @IPv6

Added subscriber: @IPv6

This issue was referenced by 75642b4cfd

This issue was referenced by 75642b4cfd654b97e8096b97add58c4afa218413
Member

Added subscriber: @dawidwizor

Added subscriber: @dawidwizor
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
5 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#87252
No description provided.